Adding persistence to db.